# CCTV_attendance

./: .gitignore  pyproject.toml  verify_install.py
src/: arcface_embed.py  extract.py  recognize4.py  recognize_SCRFD.py  retinaface_detect.py
src/embeddings/: embeddings.npy  face_db.pkl  labels.npy
